--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.0.11",
     "@types/react-redux": "^7.1.25",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
