--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.10.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "jwt-decode": "^3.1.2",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
